--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Search Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -19,13 +19,12 @@
             </select>
         </div>
         <div id="timer">Time Left: <span id="timeLeft">60</span> seconds</div>
-        <div id="wordSearchGrid"></div>
-        <div id="wordList"></div>
+        <table id="wordSearchTable"></table>
         <div id="remainingWords"></div>
         <div id="result"></div>
         <div id="score">Score: <span id="scoreValue">0</span></div>
         <button id="resetButton">Reset Game</button>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
